ocaml (3.10.2-4) UNRELEASED; urgency=low

  [ Stephane Glondu ]
  * Switching packaging to git (from svn)
  * Bump debhelper compatibility level to 7, and use debian/clean feature
    of dh_clean

  [ Stefano Zacchiroli ]
  * No longer ship stuff that will be now shipped by the new dh-ocaml package:
    - OCaml packaging policy
    - CDBS class ocaml.mk and related helpers

 -- Stephane Glondu <steph@glondu.net>  Tue, 08 Jul 2008 14:30:11 +0200

ocaml (3.10.2-3) unstable; urgency=low

  [ Stefano Zacchiroli ]
  * debian/rules: force using gcc-4.2 on arm (fix FTBFS on arm)

  [ Ralf Treinen ]
  * Added myself to uploaders.

 -- Ralf Treinen <treinen@debian.org>  Mon, 19 May 2008 23:31:52 +0200

ocaml (3.10.2-2) unstable; urgency=low

  [ Stefano Zacchiroli ]
  * releasing to unstable
  * fix "OCaml" spelling errors in package descriptions (thanks lintian!)

  [ Romain Beauxis ]
  * removed virtual package from internal dependencies in favour of strict
    versioned dependencies. Prevents build failures under some situations.

  [ Sylvain Le Gall ]
  * changing doc-base section of generated documentation to Programming/OCaml
    (Closes: #476647)
  * OCaml Packaging Policy:
    - update camlp4/camlp5 policy chapter
    - register policy in doc-base

  [ Ralf Treinen ]
  * OCaml Packaging Policy:
    - update OCaml version to 3.10.2
    - add a section on where to register documentation with doc-base.

 -- Stefano Zacchiroli <zack@debian.org>  Sun, 18 May 2008 21:46:38 +0200

ocaml (3.10.2-1) experimental; urgency=low

  [ Stefano Zacchiroli ]
  * New upstream release
    - bump OCAMLMINOR in debian/rules accordingly
  * ship .mli files pertaining to ocaml-interp (Closes: #449559)
  * ship .mli files pertaining to camlp4 (Closes: #449558)

  [ Samuel Mimram ]
  * Add a dependency from ocaml-base to libx11-dev (Closes: #465764)

 -- Stefano Zacchiroli <zack@debian.org>  Mon, 03 Mar 2008 10:15:33 +0100

ocaml (3.10.1-1) unstable; urgency=low

  [ Samuel Mimram ]